[package]
name = "aoc-2019"
version = "0.1.0"
authors = ["Matt Gathu <mattgathu@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console = "0.9.1"



[[bin]]
name = "1"
path = "src/1.rs"

[[bin]]
name = "2"
path = "src/2.rs"

[[bin]]
name = "3"
path = "src/3.rs"

[[bin]]
name = "4"
path = "src/4.rs"

[[bin]]
name = "5"
path = "src/5.rs"

[[bin]]
name = "6"
path = "src/6.rs"

[[bin]]
name = "7"
path = "src/7.rs"

[[bin]]
name = "8"
path = "src/8.rs"


